<resources>
    <string name="app_name">优易充</string>
    <string name="app_title">优易充</string>
    <string name="btn_delete_with_count">删除(%d)</string>
    <string name="btn_delete">删除</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_register">注册</string>
    <string name="rmb">元</string>
    <string name="rmb_symbol">￥</string>
    <string name="fix_success_tip">修改完成</string>
    <string name="please_login">点击登录</string>
    <string name="unnamed">匿名</string>
    <string name="unknow">未知</string>
    <string name="phone_number">手机号码</string>
    <string name="password">密码</string>
    <string name="input_phone_number">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="create_new_account">创建新用户</string>
    <string name="pwd_wrong">手机号或密码不正确！</string>
    <string name="logining">正在登录，请稍候</string>
    <string name="other_deivce_login">您的账号已经在其他设备登录,已从本设备下线,请检查</string>
    <string name="user_register">会员注册</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="phone_format_error">手机格式有误</string>
    <string name="input_code">请输入验证码</string>
    <string name="register_tips">手机号码会作为您会员登录的唯一凭证。</string>
    <string name="send_code">验证码已经发送至${0}\n接收短信大约需要${1}秒</string>
    <string name="input_pwd_length">输入6-16位的数字或字母</string>
    <string name="nickname">请称呼我</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="read">请阅读</string>
    <string name="agree">同意服务协议并注册</string>
    <string name="register_succeed">注册成功</string>
    <string name="register_succeed_tips">恭喜您加入优易充，快为爱车充电吧！</string>
    <string name="charge_car">为爱车充电</string>
    <string name="phone_no_null">手机号码不能为空</string>
    <string name="phone_length_error">手机号码不能为空</string>
    <string name="pwd_no_null">密码不能为空</string>
    <string name="pwd_length_error">密码不能为空</string>
    <string name="loading_verify_code">获取验证码中...</string>
    <string name="loading_register">注册中...</string>
    <string name="charge">充电</string>
    <string name="search_pole">寻找电桩</string>
    <string name="me">我</string>
    <string name="refresh">刷新</string>
    <string name="filter">筛选</string>
    <string name="my_order">我的订单</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_evaluation">我的评价</string>
    <string name="my_wallet">我的钱包</string>
    <string name="pole_control">电桩管理</string>
    <string name="service_center">客服中心</string>
    <string name="suggestion">帮助与反馈</string>
    <string name="my_setting">我的设置</string>
    <string name="payment_records">收支记录</string>
    <string name="recharge">充 值</string>
    <string name="charge_money_instructions">充电币使用说明</string>
    <string name="how_to_use_charge_money">充电币如何使用？</string>
    <string name="recharge_records">充值记录</string>
    <string name="pay_records">支付记录</string>
    <string name="hint_recharge">金额（元）    请输入充值金额</string>
    <string name="select_pay_type">选择充值方式</string>
    <string name="charge_money_remain">充电币余额</string>
    <string name="immediate_use">立即使用</string>
    <string name="payment_history">收支历史</string>
    <string name="recharge_money_must_greater_than_zero">充值金额必须大于0</string>
    <string name="recharge_count">充值金额：</string>
    <string name="recharge_time">充值时间：</string>
    <string name="recharge_type">充值方式：</string>
    <string name="pay_count">消费币数：</string>
    <string name="pay_coin_time">消费时间：</string>
    <string name="pay_order_id"> 订 单 号 ：</string>
    <string name="trade_order"> 交易订单</string>
    <string name="charge_money">充电费用</string>
    <string name="need_to_pay"> 还需支付</string>
    <string name="remaining_coin">剩余充电币</string>
    <string name="recharge_succeed"> 充值成功！</string>
    <string name="recharge_failed">充值失败！</string>
    <string name="known"> 知道了</string>
    <string name="reselecte_recharge_way">重新选取充值方式</string>
    <string name="cancel_recharge">取消充值</string>
    <string name="output_tension">输出电压</string>
    <string name="output_electricity">输出电流</string>
    <string name="please_connect_bluetooth">请连接蓝牙</string>
    <string name="tap_bluetooth_icon">轻轻点击蓝牙图标</string>
    <string name="please_wait">请稍候...</string>
    <string name="connect_bluetooth">连接蓝牙</string>
    <string name="connecting">连接中</string>
    <string name="please_connect_pile">请连接充电桩</string>
    <string name="insert_gun">将充电桩的插头接入</string>
    <string name="delay_charge">%s启动</string>
    <string name="start_charge">启 动</string>
    <string name="stop_charge">停 止</string>
    <string name="charge_error">故障</string>
    <string name="charge_voltage_over">交流过压</string>
    <string name="charge_voltage_lower">交流欠压</string>
    <string name="charge_current_over">交流过流</string>
    <string name="charge_current_leak">交流漏电</string>
    <string name="charge_current_short">交流短路</string>
    <string name="electric_charge">充电计费</string>
    <string name="electric_serial_no">充电流水号</string>
    <string name="yuan">元</string>
    <string name="confirm">确定</string>
    <string name="share_time">分享时段：</string>
    <string name="tag_operator">运营商：</string>
    <string name="station_position">站点位置</string>
    <string name="station_annotation">站点信息</string>
    <string name="pole_position">电桩位置：</string>
    <string name="user_evaluation">用户评价：</string>
    <string name="pole_owner">电桩业主：</string>
    <string name="contrat_phone">联系电话\t</string>
    <string name="tag_position">位置：</string>
    <string name="tag_distance">距离：</string>
    <string name="position">电桩位置</string>
    <string name="pole_type">电桩类型</string>
    <string name="rated_power">额定功率</string>
    <string name="charge_price">充电价格</string>
    <string name="nominal_voltage">额定电压</string>
    <string name="rated_current">额定电流</string>
    <string name="collect">收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="navigation">导航</string>
    <string name="no_baidu_map">您还未装百度地图</string>
    <string name="go_to_order">去预约</string>
    <string name="go_to_baidu_navigation">即将跳转到百度地图导航</string>
    <string name="title_order_add">电桩预约</string>
    <string name="title_order_add_success">预约成功</string>
    <string name="all_city">全城</string>
    <string name="distance">距离</string>
    <string name="distance_500m">500m</string>
    <string name="distance_1km">1km</string>
    <string name="distance_2km">2km</string>
    <string name="distance_3km">3km</string>
    <string name="distance_4km">4km</string>
    <string name="distance_5km">5km</string>
    <string name="all_type">全部</string>
    <string name="dc">直流</string>
    <string name="ac">交流</string>
    <string name="all_share_time">任何时段</string>
    <string name="all_day">全天</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="sort">排序</string>
    <string name="sort_hot">智能排序</string>
    <string name="sort_distance">距离优先</string>
    <string name="sort_grade">好评优先</string>
    <string name="sort_price">价格优先</string>
    <string name="other">其它</string>
    <string name="filtrate">筛选</string>
    <string name="qr_code_tips">业主扫一扫上面的二维码图案，添加用户</string>
    <string name="my_qr_code">我的个人二维码</string>
    <string name="take_photo">拍照</string>
    <string name="from_album">从手机相册选择</string>
    <string name="bt_list">设备列表</string>
    <string name="bt_unsupport">本设备不支持蓝牙通讯</string>
    <string name="bt_conn_timeout">蓝牙连接超时</string>
    <string name="bt_conn_fail">蓝牙连接失败</string>
    <string name="bt_conn_success">蓝牙连接成功</string>
    <string name="bt_disconn">蓝牙连接断开</string>
    <string name="bt_cmd_timeout">蓝牙命令发送超时</string>
    <string name="bt_cmd_fail">蓝牙命令发送失败</string>
    <string name="control_no_permission">对不起，您没有权限控制该充电桩</string>
    <string name="control_has_permission">您可以开始使用充电桩了</string>
    <string name="control_begin_verify">开始验证Key的有效性</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="title">标题</string>
    <string name="ok">确定</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="no_limit">不限</string>
    <string name="exit_tips">再按一次退出应用</string>
    <string name="next">下一步</string>
    <string name="commit">提交</string>
    <string name="pole_info">电桩信息</string>
    <string name="order_now">马上预约</string>
    <string name="lbs">定位</string>
    <string name="lbsing">定位中</string>
    <string name="lbs_fail">定位失败</string>
    <string name="lbs_city">定位城市</string>
    <string name="select_city">选择城市</string>
    <string name="search_city">搜索城市（中文/拼音）</string>
    <string name="hot_city">热门城市</string>
    <string name="navi_by_location_map">其他地图导航</string>
    <string name="network_no_connection">没有网络连接</string>
    <string name="_thursday">周四</string>
    <string name="_monday">周一</string>
    <string name="_thuesday">周二</string>
    <string name="_wednesday">周三</string>
    <string name="_friday">周五</string>
    <string name="_saturday">周六</string>
    <string name="_sunday">周日</string>
    <string name="pile_error">充电桩故障</string>
    <string name="tips_pile_error">充电桩故障，请联系客服！</string>
    <string name="tips_service_center">有问题咨询，请联系客服！</string>
    <string name="call_service">拨打热线 400-655-6620</string>
    <string name="cancel_display_button">取消发布</string>
    <string name="update_display_button">更新发布</string>
    <string name="collecting">收藏中…</string>
    <string name="cancel_collecting">取消中…</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="pile_display_activity_timeConflict">时间段有冲突,请修改时间段</string>
    <string name="setting_time_activity_timeConflict">时间段有冲突,请修改或删除</string>
    <string name="authorized_management">授权用户管理</string>
    <string name="qr_code_add_user">扫描二维码添加用户</string>
    <string name="format_error">二维码格式有误</string>
    <string name="decode_fail">解析失败</string>
    <string name="scan_qr_code_tips1">业主：请扫描需要添加的用户二维码</string>
    <string name="scan_qr_code_tips2">用户：打开 “我的” ，点击个人资料，打开二维码</string>
    <string name="scan_qr_code_tips3">用户：打开</string>
    <string name="scan_qr_code_tips4">“我的”</string>
    <string name="scan_qr_code_tips5">，点击个人资料，打开二维码</string>
    <string name="waiting">请稍候...</string>
    <string name="loading">加载中…</string>
    <string name="canceling">正在取消发布</string>
    <string name="canceled">已取消发布</string>
    <string name="get_collectedtag_fail">获取收藏信息失败</string>
    <string name="display_update">更新发布</string>
    <string name="display_rn">马上发布</string>
    <string name="contact_name">联系人</string>
    <string name="setting_time">设置时间段</string>
    <string name="add">添加</string>
    <string name="charge_free">充电价格</string>
    <string name="charge_free_format_error">充电价格格式不对，请重输</string>
    <string name="charge_free_empty">充电价格不能为空，请重输</string>
    <string name="btn_pile_type">电桩类型</string>
    <string name="display_none">取消发布</string>
    <string name="phone_num">登录手机号</string>
    <string name="login_pwd">登录密码</string>
    <string name="user_name">用户名</string>
    <string name="pile_current_time_setting">电桩对时</string>
    <string name="pile_current_time_tip">桩当前时间</string>
    <string name="pile_current_time_tip2">对时前，请确保手机系统时间为当地时间，且正确</string>
    <string name="pile_automatic_change_time">自动对时</string>
    <string name="pile_unautomatic_change_time">手动对时</string>
    <string name="choice_year">全部年份</string>
    <string name="choice_month">全部月份</string>
    <string name="choice_all_user">全部用户</string>
    <string name="payway_baifubao">百度钱包</string>
    <string name="payway_alipay">支付宝</string>
    <string name="download_qr_code_text">扫描二维码下载app</string>
    <string name="share_title">智慧汽车充电分享平台</string>
    <string name="share_second_title">优享充电\t\t易享充电\t\t智享充电</string>
</resources>