<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/h10" 
    android:background="#44000000">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_cancel"
        android:layout_marginBottom="@dimen/h8"
        android:background="@drawable/shape_text_whitecolor"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/take_photo_btn"
            style="@style/take_photo_text"
            android:text="@string/take_photo" />

        <include layout="@layout/line_horizontal_grey_small"/>

        <TextView
            android:id="@+id/from_album_btn"
            style="@style/take_photo_text"
            android:text="@string/from_album" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/take_photo_text"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_text_whitecolor"
        android:text="@string/cancel" />

</RelativeLayout>