<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:gravity="center_horizontal"
              android:focusableInTouchMode="true"
              android:orientation="vertical">
    <requestFocus/>

    <include
        android:id="@+id/top_bar"
        layout="@layout/top_simple_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <com.xpg.hssy.view.EditDeleteText
            android:id="@+id/et_money"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50"
            android:layout_marginTop="@dimen/h45"
            android:background="@drawable/login_inputbox"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/emotionstore_progresscancelbtn"
            android:hint="@string/hint_recharge"
            android:inputType="numberDecimal"
            android:padding="@dimen/h15"
            android:singleLine="true"
            android:textSize="@dimen/w13"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/h20"
            android:layout_marginRight="@dimen/w15"
            android:layout_marginTop="@dimen/h10">

            <TextView
                android:id="@+id/tv_use"
                style="@style/text_gray_smaller"
                android:layout_alignParentRight="true"
                android:text="@string/how_to_use_charge_money"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/h15"
            android:background="@color/line_grey_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/w15">

            <TextView
                style="@style/tab_booking_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/w10"
                android:layout_marginTop="@dimen/w15"
                android:text="@string/select_pay_type"/>

            <include layout="@layout/line_horizontal_grey_small"/>

            <RelativeLayout
                android:id="@+id/rl_baifubao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/h5"
                android:paddingTop="@dimen/h5">

                <ImageView
                    android:id="@+id/iv_baifubao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/baidupay"/>

                <TextView
                    android:id="@+id/tv_baifubao"
                    style="@style/text_payway"
                    android:layout_toRightOf="@id/iv_baifubao"
                    android:text="@string/payway_baifubao"/>

                <ImageView
                    android:id="@+id/iv_select_baifubao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/h5"
                    android:src="@drawable/wallet_choice"/>


            </RelativeLayout>

            <include layout="@layout/line_horizontal_grey_small"/>

            <RelativeLayout
                android:id="@+id/rl_zhifubao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/h5"
                android:paddingTop="@dimen/h5">

                <ImageView
                    android:id="@+id/iv_zhifubao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/alipay"/>

                <TextView
                    android:id="@+id/tv_zhifubao"
                    style="@style/text_payway"
                    android:layout_toRightOf="@id/iv_zhifubao"
                    android:text="@string/payway_alipay"/>

                <ImageView
                    android:id="@+id/iv_select_zhifubao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/h5"
                    android:src="@drawable/wallet_choice"/>

            </RelativeLayout>

            <include layout="@layout/line_horizontal_grey_small"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECEAE8"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/h15">

        <Button
            android:id="@+id/btn_ok"
            style="@style/btn_water_blue_smaller"
            android:enabled="true"
            android:text="@string/ok"/>

    </LinearLayout>


</LinearLayout>
